# stemtools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  get-stem-spec-gpac.cpp  get-stem-spec.cpp  requirements.txt  vcpkg.json
cmake/modules/: FindGPAC.cmake
src/audio/: audio.cpp  audio.hpp
src/common/: error.cpp  error.hpp  util.hpp
src/demucs/: demucs-test.cpp  demucs-torch.cpp  demucs.cpp  demucs.hpp
src/demucs/_torch/: demucs.cpp  demucs.hpp
src/nistem/: get-stem-spec-gpac.cpp  get-stem-spec.cpp
